--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@prisma/client": "^6.5.0",
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
+    "csv-stringify": "^6.5.2",
     "effect": "^3.14.1",
     "hono": "^4.7.5",
     "jsonwebtoken": "^9.0.2"
